--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,37 @@ footer {
 .names p {
   margin-right: 1rem;
 }
+
+/* Media queries */
+
+@media screen and (max-width: 768px) {
+  header {
+    padding: 0.5rem;
+  }
+
+  header h1 {
+    font-size: 1.5rem;
+  }
+
+  nav li {
+    margin-right: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header {
+    padding: 0.25rem;
+  }
+
+  header h1 {
+    font-size: 1rem;
+  }
+
+  nav li {
+    margin-right: 0.25rem;
+  }
+
+  .names p {
+    margin-right: 0.5rem;
+  }
+}
