--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,3 +5,11 @@
     border-radius: 10px;
     border: 1px solid green;
 }
+
+a{
+    text-decoration: none;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    border-color: 1px solid green;
+}
